<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="br.com.andrefch.popularmoviesii.ui.detailmovie.DetailMovieActivity">
    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_favorite_outline"
        android:orderInCategory="100"
        android:title="@string/action_favorite"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_unfavorite"
        android:icon="@drawable/ic_favorite"
        android:orderInCategory="100"
        android:title="@string/action_unfavorite"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:orderInCategory="200"
        android:title="@string/action_share"
        app:showAsAction="ifRoom"/>
</menu>
