<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:minHeight="?attr/listPreferredItemHeight">

        <ImageView
            android:id="@+id/iconImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/detail_movie_review_icon_content_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_user_comment"/>

        <TextView
            android:id="@+id/authorTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            style="@style/ListPrimaryText"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iconImageView"
            app:layout_constraintTop_toTopOf="@+id/iconImageView"
            tools:text="@string/example_review_author"/>

        <TextView
            style="@style/ListSecondaryText"
            android:id="@+id/contentTextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/authorTextView"
            app:layout_constraintHeight_default="wrap"
            app:layout_constraintStart_toStartOf="@+id/authorTextView"
            app:layout_constraintTop_toBottomOf="@+id/authorTextView"
            tools:text="@string/example_review_content"/>

    </android.support.constraint.ConstraintLayout>

</layout>